# text2image-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build_push_docker_image.yaml  deployment.yaml  lint.yaml
app/: bot.py  consts.py  launch.py  main.py  model.py  tokens.py  utils.py
scripts/: build_run.sh
