[tool.poetry]
name = "text2image-bot"
version = "0.1.0"
description = ""
authors = ["Ailurus1"]
readme = "README.md"
packages = [{include = "text2image_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.22.0"
python-telegram-bot = "20.2"
Pillow = "9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
